--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </div>
     </div>
 <div class="image">
-    <img draggable="false" class="tilt" src="D:\coding\manjith.jpg" alt="">
+    <img draggable="false" class="tilt" src="manjith.jpg" alt="">
 </div>
 </section>
 <!-- hero section ends -->
@@ -63,7 +63,7 @@
     <div class="row">
 
     <div class="image">
-        <img draggable="false" class="tilt" src="D:\coding\m3.jpg" alt="">
+        <img draggable="false" class="tilt" src="m3.jpg" alt="">
     </div>
     <div class="content">
         <h3>I'm Manjith Reddy </h3>
