--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
     <div class="socials">
         <ul class="social-icons">
           <li><a class="linkedin" aria-label="LinkedIn" href="https://www.linkedin.com/in/manjith-reddy-9a0398255?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"><i class="fab fa-linkedin"></i></a></li> 
-          <li><a class="github" aria-label="GitHub" href="https://github.com/ManikantaReddy-13" target="_blank"><i class="fab fa-github"></i></a></li>
-          <li><a class="twitter" aria-label="Twitter" href="https://twitter.com/Mani_Reddy_13" target="_blank"><i class="fab fa-twitter"></i></a></li>
-          <li><a class="telegram" aria-label="Telegram" href="https://t.me/ManikantaReddy_13" target="_blank"><i class="fab fa-telegram-plane"></i></a></li>
+          <li><a class="github" aria-label="GitHub" href="" target="_blank"><i class="fab fa-github"></i></a></li>
+          <li><a class="twitter" aria-label="Twitter" href="" target="_blank"><i class="fab fa-twitter"></i></a></li>
+          <li><a class="telegram" aria-label="Telegram" href="https://t.me/manjith2002" target="_blank"><i class="fab fa-telegram-plane"></i></a></li>
           <li><a class="instagram" aria-label="Instagram" href="https://www.instagram.com/classic_boy_manjith/"><i class="fab fa-instagram" target="_blank"></i></a></li>
         </ul>
       </div>
@@ -306,11 +306,11 @@ If you are interested in contacting me in regards to a position with your compan
           <p> <i class="fas fa-map-marked-alt"></i>Andhra Pradesh, India</p>
           <div class="share">
 
-              <a href="https://www.linkedin.com/in/manikanta-reddy-mula-b6809724b" class="fab fa-linkedin" aria-label="LinkedIn" target="_blank"></a>
-              <a href="https://github.com/ManikantaReddy-13" class="fab fa-github" aria-label="GitHub" target="_blank"></a>
+              <a href="https://www.linkedin.com/in/manjith-reddy-9a0398255?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=an" class="fab fa-linkedin" aria-label="LinkedIn" target="_blank"></a>
+              <a href="" class="fab fa-github" aria-label="GitHub" target="_blank"></a>
               <a href="mailto:mamjithreddy9@gmail.com" class="fas fa-envelope" aria-label="Mail" target="_blank"></a>
               <a href="" class="fab fa-twitter" aria-label="Twitter" target="_blank"></a>
-              <a href="https://t.me/ManikantaReddy_13" class="fab fa-telegram-plane" aria-label="Telegram" target="_blank"></a>
+              <a href="https://t.me/manjith2002" class="fab fa-telegram-plane" aria-label="Telegram" target="_blank"></a>
           </div>
       </div>
   </div>
