--- a/index.html
+++ b/index.html
@@ -215,10 +215,10 @@ If you are interested in contacting me in regards to a position with your compan
     <div class="container left">
       <div class="content">
         <div class="tag">
-          <h2>Skill Dzire</h2>
+          <h2>Indo Euro Sync</h2>
         </div>
         <div class="desc">
-            <h3>Sub Station Design | Internship</h3>
+            <h3>Automatic Robotics Controll | Internship</h3>
             <p>jan 2024 - June 2024 </p>
         </div>
       </div>
