--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div class="row">
 
     <div class="image">
-        <img draggable="false" class="tilt" src="m3.jpg" alt="">
+        <img draggable="false" class="tilt" src="mejpg.jpg" alt="">
     </div>
     <div class="content">
         <h3>I'm Manjith Reddy </h3>
