--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ If you are interested in contacting me in regards to a position with your compan
         <div class="content">
         <h3>Bachelor of Technology(EEE)</h3>
         <p>Annamacharya Institute of Technology and Sciences | Rajampet</p>
-        <h4>2020-2024 | Pursuing</h4>
+        <h4>2020-2024 | Graduated</h4>
         </div>
     </div>
 
